// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsEdit when there is content renders the component 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root tags-edit css-nen11g-MuiStack-root"
    data-testid="tags-edit"
  >
    <div
      class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-focused MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1jy569b-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        for="tag-select-input"
        id="tag-select-label"
      >
        Tags
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-focused MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
        data-testid="tag-select"
      >
        <div
          aria-controls=":r0:"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-label="tag select input"
          aria-labelledby="tag-select-label tag-select"
          class="MuiSelect-select MuiSelect-outlined MuiSelect-multiple MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
          id="tag-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="MuiBox-root css-yi3mkw"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-outlinedPrimary tag css-1y6wsfa-MuiChip-root"
              role="button"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-rrn746-MuiChip-label"
              >
                Tag 1
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-outlinedPrimary tag css-1y6wsfa-MuiChip-root"
              role="button"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-rrn746-MuiChip-label"
              >
                Tag 2
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-outlinedPrimary tag css-1y6wsfa-MuiChip-root"
              role="button"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-rrn746-MuiChip-label"
              >
                Tag 3
              </span>
            </div>
          </div>
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
          id="tag-select-input"
          tabindex="-1"
          value="Tag 1,Tag 2,Tag 3"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined MuiSelect-iconOpen css-bpeome-MuiSvgIcon-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-r01yff-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-sl37lx-MuiNotchedOutlined-root"
          >
            <span>
              Tags
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagsEdit when there is content when tags are undefined it does not render the component 1`] = `<DocumentFragment />`;

exports[`TagsEdit when there is content when tags array is empty it does not render the component 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root tags-edit css-nen11g-MuiStack-root"
    data-testid="tags-edit"
  >
    <div
      class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1jy569b-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink="true"
        for="tag-select-input"
        id="tag-select-label"
      >
        Tags
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root"
        data-testid="tag-select"
      >
        <div
          aria-controls=":r1:"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="tag select input"
          aria-labelledby="tag-select-label tag-select"
          class="MuiSelect-select MuiSelect-outlined MuiSelect-multiple MuiInputBase-input MuiOutlinedInput-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
          id="tag-select"
          role="combobox"
          tabindex="0"
        >
          <div
            class="MuiBox-root css-yi3mkw"
          >
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-outlinedPrimary tag css-1y6wsfa-MuiChip-root"
              role="button"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-rrn746-MuiChip-label"
              >
                Tag 1
              </span>
            </div>
            <div
              class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-outlinedPrimary tag css-1y6wsfa-MuiChip-root"
              role="button"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall css-rrn746-MuiChip-label"
              >
                Tag 2
              </span>
            </div>
          </div>
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
          id="tag-select-input"
          tabindex="-1"
          value="Tag 1,Tag 2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="MuiOutlinedInput-notchedOutline css-r01yff-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="css-sl37lx-MuiNotchedOutlined-root"
          >
            <span>
              Tags
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
